# aivim

./: .gitignore  Cargo.toml  README.md  alpha.txt  mytest.txt  mytest2.txt
crates/aivim-core/: Cargo.toml
crates/aivim-core/examples/: test_dw.rs
crates/aivim-core/src/: buffer.rs  buffer_snapshot.rs  cursor.rs  edit.rs  editor.rs  lib.rs  macros.rs  mode.rs  motion.rs  register.rs  replace.rs  search.rs  text_object.rs  window.rs
crates/aivim-core/tests/: unit_tests.rs
crates/aivim-core/tests/unit/: buffer_manager_test.rs  buffer_snapshot_test.rs  buffer_test.rs  chinese_test.rs  clipboard_test.rs  cursor_test.rs  display_width_test.rs  edit_test.rs  editor_delete_test.rs  line_number_test.rs  mod.rs  motion_test.rs  register_test.rs  registers_command_test.rs  replace_test.rs  search_test.rs  text_object_test.rs
crates/aivim-tui/: Cargo.toml
crates/aivim-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/aivim-tui/tests/: register_status_test.rs
docs/: UNDO_ARCHITECTURE.md  buffer_management_tutorial.md  p0_p1_features_tutorial.md  product_design.md
docs/devlogs/: 2026-02-19-mvp-development.md  2026-02-19-phase2-registers.md  2026-02-20-bug-fixes.md  2026-02-20-phase2-word-motion.md  2026-02-21-named-registers.md
docs/tutorials/: vim-registers-guide.md
src/: main.rs
