[package]
name = "aivim-core"
version = "0.1.0"
edition = "2021"
description = "Core editing engine for AIVim"

[dependencies]
ropey = "1.6"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
unicode-width = "0.1"
arboard = { version = "3.4", default-features = false, features = ["wayland-data-control"] }
